--- a/style.css
+++ b/style.css
@@ -8,67 +8,60 @@
 
 body{
     font-family: 'Lato', sans-serif;
-    background-image: url(./images/body-bg.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    display: flex;
+    
 }
 
 main{
-   
-    margin: 50px 170px;
     display: flex;
     flex-flow: row;
-    height: 700px;
+    height: 100%;
+    width: 100%;
 }
 
 .credit-card-info{
-    background: #89ace3c2;
-    background-image: url(./images/main-bg.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    justify-content: flex-start;
-    height: 100%;
-    padding: 100px 0 60px 50px;
-    border-radius: 32px 0 0 32px;
-    display: flex;
-    flex-flow: column;
-    gap: 25px;
-    color: #fff;
     flex-basis: 60%;
+    background: #89ABE3;
+    background-image: url(./images/main-bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    padding: 13vh 5vw;
+    color: #FCF6F5;
 }
 
 .credit-card-links{
     border-bottom: 0.5px solid rgba(255, 255, 255, 0.445);
     display: flex;
     gap: 30px;
-    width: 200px;
+    width: 50%;
 }
 
 .credit-card-links a{
     text-decoration: none;
     font-weight: 600;
     color: #fff;
+    font-size: 1.3em;
 }
 
 .cred-card{
-    border-bottom: 2px solid #fff;
-    
+    border-bottom: 2px solid #fff; 
+    flex-basis: 50%;  
 }
 
-.img{
-    transform: scale(0.7) translateX(-20%);
-    margin-bottom: -20px;
+.credit-card-info img{
+    transform: scale(75%);
+    margin: 8vh 0 6vh 0;
 }
 
 .card-info{
     display: flex;
     flex-flow: column;
-    gap: 15px;
-    width: 600px;
+    gap: 2vh;
+    width: 100%;
 }
 
 .c-info-label{
-    font-size: 12px;
+    font-size: 14px;
     color: #fff;
     opacity: 0.7;
     
@@ -79,6 +72,7 @@ main{
     flex-flow: column;
     gap: 20px;
     width: 300px;
+    margin-top: 4vh;
 }
 
 .inputs{
@@ -86,8 +80,10 @@ main{
     background-color: rgba(255, 255, 255, 0);
     border-bottom: 1px solid #fff;
     font-size: 16px;
-    height: 30px;
+    height: 50px;
     color: #fff;
+    width: 120%;
+    
 }
 
 
@@ -96,13 +92,14 @@ main{
     color: #fff;
     padding: 0 0 0 10px;
     font-family: 'Lato';
-    font-size: 17px;
+    font-size: 20px;
 }
 
 .date-cvv{
     display: flex;
-    flex-flow: row wrap;
-    gap: 80px;
+    flex-flow: row;
+    gap: 100px;
+    margin-top: 4vh;
 }
 
 .date{
@@ -112,30 +109,40 @@ main{
     width: 25%;
 }
 
+
+
 .cvv{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: -14px;
-    width: 15%;
+    flex-basis: 15%;
 }
 
-.cvv img{
-    transform: scale(0.8) translateY(32%);
-    margin-left: 0px;
+.cvv-icon{
+    display: flex;
+    flex-direction: row;
+    margin: 0;
 }
+
+.cvv-icon img{
+    margin: -2vh 0.1vw -2vh 0.8vw ;
+    transform: scaleX(120%) scale(70%);
+    
+}
+
+
 
 input[type=submit]{
     width: 250px;
-    height: 35px;
+    height: 40px;
     background: #fcf6f5;
     border: 0;
     color:#4986E0F2;
     font-size: 22px;
-    padding: 7px 20px;
-    border-radius: 13px;
+    padding: 10px 20px;
+    border-radius: 15px;
     font-weight: 600;
-    margin: 50px;
+    margin: 60px;
 
 }
 
@@ -148,116 +155,52 @@ input[type=submit]:hover{
 }
 
 .details{
-    background: #FCF6F5;
-    border-radius: 0 32px 32px 0;
-    color: #4986E0;
     flex-basis: 40%;
+    padding: 3vh 4vw;
+    background-color: #FCF6F5B2;
+    color: #4986E0;
 }
 
-.details .back-btn{
-    transform: scale(0.8) translate(310px);  
+.back{
+    display: flex;
+    justify-content: flex-end;
 }
 
 .details-content{
+    margin-top: 7vh;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    margin-top: 30px;
-}
-
-.details-content .logo{
-    transform: scale(0.5) translateY(-30%);
-
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    gap: 7vh;
 }
 
 .details-content h2{
-    align-self: center;
+    font-size: 1.8em;
 }
 
 .details-content h4{
-    align-self: center;
-    margin-top: -110px;
-    font-size: 22px;
-    transform: translateY(30px);
+    font-size: 1.8em;
 }
 
 em{
-    font-size: 40px;
-    margin-top: 70px;
-    align-self: center;
-    font-weight: 600;
+    font-size: 2.5em;
+    font-weight: 800;
 }
 
 .features{
-     margin-top: 40px;
-     align-self: center;
-}
-
-.feature{
     display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-bottom: 30px;
+    flex-direction: column;
+    gap: 5vh;
 }
 
-.feature img{
-    transform: scale(0.8);
+.features .feature{
+    display: flex;
+    gap: 2vw;
+    font-size: 1.2em;
+    font-weight: 500;
 }
-
-@media(max-width: 700px) {
-    body{
-        background-image: none;
-    }
-    
-    main{
-        display: grid;
-        grid-template-areas: 
-                'details'
-                'card-info';   
-        gap: -90px; 
-        width: 100%;
-        transform: translateX(-45%) translateY(-5%); 
-    }
-    section{
-        display: block;
-    }
-    
-    .credit-card-info{
-        grid-area: card-info;
-        background-image: url(./images/main-bg.png);
-        width: 100%;
-        border-radius: 0 0 32px 32px;
-    }
-
-    .details{
-        grid-area: details;
-        border-radius: 32px 32px 0 0;   
-    }
-
-    .details .back-btn{
-        transform: translateX(320px) translateY(20px);
-    }
-
-    .card-info{
-        width: 100%;
-    }
-
-    .date-cvv{
-        width: 100%;
-    }
-    input[type=submit]{
-        transform: translateX(-20%);
-    }
-    
-
-
-
-}
-  
-
-
-
-
-
 
 
 
